--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "file-loader": "^6.2.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
-    "spyne-plugin-console": "^0.4.0",
     "karma": "^6.4.4",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.2.0",
@@ -32,11 +31,13 @@
     "karma-mocha": "^2.0.1",
     "karma-webpack": "^5.0.1",
     "mini-css-extract-plugin": "^2.4.6",
+    "mocha": "^11.0.1",
     "requirejs": "^2.3.7",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.79.3",
     "sass-loader": "^16.0.2",
     "spyne-cli": "^0.4.1",
+    "spyne-plugin-console": "^0.4.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
