--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "spyne-hello-world-app",
   "version": "0.0.5",
   "description": "Bare bones spyne application.",
+  "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "init": "npm install && npm i -D mocha-loader --force",
     "start": "webpack serve --open",
     "build": "webpack --mode production --env build",
     "build:apache": "buildType=apache webpack --mode production --env build",
-    "test": "karma start"
+    "installLinks": "npm link spyne spyne-plugin-console",
+    "test": "web-test-runner --config web-test-runner.config.js",
+    "lint": "eslint 'src/**/*.{js}'",
+    "format": "prettier --write 'src/**/*.{js,css,scss,html}'"
   },
   "dependencies": {
     "ramda": "^0.30.1",
@@ -16,11 +19,21 @@
     "spyne": "^0.19.1"
   },
   "devDependencies": {
-    "chai": "^5.1.1",
-    "clean-webpack-plugin": "^4.0.0",
+    "@esm-bundle/chai": "^4.3.4-fix.0",
+    "@web/dev-server": "^0.4.6",
+    "@web/dev-server-esbuild": "^1.0.3",
+    "@web/test-runner": "^0.19.0",
+    "@web/test-runner-commands": "^0.9.0",
+    "@web/test-runner-junit-reporter": "^0.7.2",
+    "@web/test-runner-mocha": "^0.9.0",
+    "chai": "^5.1.2",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
-    "eslint": "^8.6.0",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-webpack-plugin": "^4.2.0",
     "file-loader": "^6.2.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
@@ -32,6 +45,7 @@
     "karma-webpack": "^5.0.1",
     "mini-css-extract-plugin": "^2.4.6",
     "mocha": "^11.0.1",
+    "prettier": "^3.4.2",
     "requirejs": "^2.3.7",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.79.3",
