--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.5.0",
   "description": "Bare bones spyne application.",
   "main": "src/index.js",
-  "type" : "module",
+  "type": "module",
   "scripts": {
     "start": "webpack serve --open",
     "build": "webpack --mode production --env build",
@@ -11,6 +11,7 @@
     "installLinks": "npm link spyne spyne-plugin-console",
     "test": "web-test-runner --config web-test-runner.config.js",
     "lint": "eslint --config eslint.config.js",
+    "lint:fix": "eslint --config eslint.config.js --fix",
     "format": "prettier --write 'src/**/*.{js,css,scss,html}'"
   },
   "dependencies": {
@@ -33,9 +34,11 @@
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-mocha": "^10.5.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-webpack-plugin": "^4.2.0",
     "file-loader": "^6.2.0",
+    "globals": "^15.14.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
